2006-10-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalInlineAptView.m ([UIxCalInlineAptView
	-displayClasses]): return the correct class for the current event
	representation depending on its owner.

	* UI/Scheduler/UIxCalCalendarsListView.m: added method to create
	and associate a color for each user login depending on its
	position in the list.

	* UI/Scheduler/UIxCalAptListView.m ([UIxCalAptListView
	-currentRowCSSClass]): return the correct class for the current
	row depending on the owner of the event.

	* UI/Contacts/UIxContactSelector.m ([UIxContactSelector
	-setColors:colors]): new method to associate a color table with
	each user in the list.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder
	-fetchFields:_fieldsfromFolder:_folderfrom:_startDateto:_endDatecomponent:_component]): associate each returned record with the owner of the table they are retrieved from.

	* SoObjects/SOGo/NSObject+Owner.[hm]: new extension module to
	NSObject to associate an instance with a user.

2006-10-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/SchedulerUI.js: added handling of multiple
	calendars.

	* UI/WebServerResources/ContactsUI.js: added handling of
	notification of changes to contact selectors.

	* UI/WebServerResources/generic.js: added handling of notification
	of changes to contact selectors.

	* UI/Scheduler/UIxCalMainView.m ([UIxCalMainView
	-updateCalendarsAction]): proxy method to update the user
	preference table with the new selected calendar uids.

	* UI/Contacts/UIxContactsListView.m ([UIxContactsListView
	-calendarsContactsAction]): new method.

	* UI/Contacts/UIxContactSelector.m ([UIxContactSelector -setCheckedBoxes:boxes]) 
	([UIxContactSelector -setHasCheckBoxes:aBool]) 
	([UIxContactSelector -isCheckBoxChecked]): new accessors method to
	permit the drawing of checkboxes instead of card icons.

	* UI/Scheduler/UIxCalCalendarsListView.m: new component class that