@@ -1,5 +1,9 @@
 2006-10-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* SoObjects/Appointments/SOGoAppointmentFolder.m
+	([SOGoAppointmentFolder -deleteEntriesWithIds:ids]): don't delete
+	entries if their owner is not the current user.
+
 	* UI/Scheduler/UIxCalInlineAptView.m ([UIxCalInlineAptView
 	-displayClasses]): return the correct class for the current event
 	representation depending on its owner.
